--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,10 @@ h1 {
   font-size: 50px;
   font-family: "Cormorant Garamond", serif;
 }
+
+.pwa-already-installed {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #05c800;
+  text-align: center;
+}
